apps/base/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dashy
  name: dashy-service
  namespace: dashy
spec:
  ports:
    - port: 9004
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: dashy
  type: LoadBalancer
