apps/base/dashy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy-ingress
  namespace: dashy
  labels:
    app.kubernetes.io/name: dashy
spec:
  ingressClassName: traefik
  rules:
  - host: sparky-homelab.org 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashy-service
            port:
              number: 9004
